--- a/src/gcbulkgrader.csproj
+++ b/src/gcbulkgrader.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Google.Apis.Classroom.v1" Version="1.32.2.1198" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
